<resources>
    <string name="app_name">Calculator</string>
    <string name="editText">Enter the Numbers</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="dot"><b>.</b></string>
    <string name="equal">=</string>
    <string name="this_is_my_text">This is my text</string>
    <string name="x">X</string>
    <string name="diff">-</string>
    <string name="plus">+</string>
    <string name="divide">/</string>
    <string name="initialValue">0</string>
    <string name="del">DEL</string>
    <string name="c">C</string>
    <string name="history">History</string>
    <string name="title_activity_history">HistoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">Back</string>
</resources>